# hzhou-dynamic-lio

./: cursor-instructions.md  dynamic_lio_CA_startup.sh
sr_lio/: CMakeLists.txt
sr_lio/include/: cloudMap.h  eskfEstimator.h  lioOptimization.h
sr_lio/src/: cloudProcessing.cpp  eskfEstimator.cpp  lioOptimization.cpp  optimize.cpp  utility.cpp
